--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -1,11 +1,12 @@
 name: deploy-conda
 
 on:
-    push:
-        branches:
-            - main
+    # push:
+    #     branches:
+    #         - main
     release:
-        types: [published]
+        types: 
+            - published
 
 jobs:
     build_upload_conda:
