--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -32,7 +32,7 @@ requirements:
         - pytest-runner
     run:
         - python>=2.7
-        - {{ pin_compatible('numpy') }}
+        - numpy>1.11
         - scipy>=1.3
         - matplotlib>=2.0
         - seaborn
