--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -24,14 +24,17 @@ requirements:
     build:
         - {{ compiler('c') }}
     host:
-        - python>=2.7
+        - python {{ python }}
         - setuptools
         - numpy>1.11
         - cython>=0.29
         - pip
         - pytest-runner
+        - scipy>=1.3
+        - matplotlib>=2.0
+        - seaborn
     run:
-        - python>=2.7
+        - python {{ python }}
         - numpy>1.11
         - scipy>=1.3
         - matplotlib>=2.0
