--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -13,10 +13,8 @@ source:
 
 build:
     number: 0
-    script: 
-        - pip install --upgrade setuptools
-        - python setup.py install . --single-version-externally-managed --record=record.txt -vvv
-    # script: python setup.py install
+    script: python setup.py install
+    # script: # - python setup.py install . --single-version-externally-managed --record=record.txt -vvv
     # script: {{ PYTHON }} -m pip install . --single-version-externally-managed --record=record.txt --no-deps --ignore-installed --no-cache-dir -vvv
     # script: "{{ PYTHON }} -m pip install . -vv"
 
