--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -21,6 +21,9 @@ build:
 requirements:
     build:
         - {{ compiler('c') }}
+        - llvm-openmp  # [osx]
+        - libgomp      # [linux]
+
     host:
         - python {{ python }}
         - setuptools
