--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -13,7 +13,10 @@ source:
 
 build:
     number: 0
-    script: python setup.py install
+    script: 
+        - brew install libomp   # [osx]
+        - export LDFLAGS=-L/usr/local/opt/libomp/lib   # [osx]
+        - python setup.py install
     # script: # - python setup.py install . --single-version-externally-managed --record=record.txt -vvv
     # script: {{ PYTHON }} -m pip install . --single-version-externally-managed --record=record.txt --no-deps --ignore-installed --no-cache-dir -vvv
     # script: "{{ PYTHON }} -m pip install . -vv"
@@ -22,7 +25,6 @@ requirements:
     build:
         - {{ compiler('c') }}
         - llvm-openmp  # [osx]
-        - libgomp      # [linux]
 
     host:
         - python {{ python }}
@@ -31,6 +33,7 @@ requirements:
         - cython>=0.29
         - pip
         - pytest-runner
+        - suitesparse
         - scipy>=1.3
         - matplotlib>=2.0
         - seaborn
@@ -38,6 +41,7 @@ requirements:
         - python {{ python }}
         - numpy>1.11
         - scipy>=1.3
+        - suitesparse
         - matplotlib>=2.0
         - seaborn
 
