--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -14,9 +14,9 @@ source:
 build:
     number: 0
     script: 
-        - brew install libomp   # [osx]
-        - export LDFLAGS=-L/usr/local/opt/libomp/lib   # [osx]
         - python setup.py install
+        # - brew install libomp   # [osx]
+        # - export LDFLAGS=-L/usr/local/opt/libomp/lib   # [osx]
     # script: # - python setup.py install . --single-version-externally-managed --record=record.txt -vvv
     # script: {{ PYTHON }} -m pip install . --single-version-externally-managed --record=record.txt --no-deps --ignore-installed --no-cache-dir -vvv
     # script: "{{ PYTHON }} -m pip install . -vv"
