--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -33,7 +33,7 @@ requirements:
         - cython>=0.29
         - pip
         - pytest-runner
-        - suitesparse
+        # - suitesparse
         - scipy>=1.3
         - matplotlib>=2.0
         - seaborn
@@ -41,7 +41,7 @@ requirements:
         - python {{ python }}
         - numpy>1.11
         - scipy>=1.3
-        - suitesparse
+        # - suitesparse
         - matplotlib>=2.0
         - seaborn
 
