--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -34,13 +34,13 @@ requirements:
         - pip
         - pytest-runner
         # - suitesparse
-        - scipy>=1.3
+        - scipy
         - matplotlib>=2.0
         - seaborn
     run:
         - python {{ python }}
         - numpy>1.11
-        - scipy>=1.3
+        - scipy
         # - suitesparse
         - matplotlib>=2.0
         - seaborn
