--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -35,14 +35,14 @@ requirements:
         - pytest-runner
         # - suitesparse
         - scipy
-        - matplotlib>=2.0
+        - matplotlib
         - seaborn
     run:
         - python {{ python }}
         - numpy>1.11
         - scipy
         # - suitesparse
-        - matplotlib>=2.0
+        - matplotlib
         - seaborn
 
 test:
