--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -29,8 +29,8 @@ requirements:
     host:
         - python {{ python }}
         - setuptools
-        - numpy>1.11
-        - cython>=0.29
+        - numpy
+        - cython
         - pip
         - pytest-runner
         # - suitesparse
@@ -39,7 +39,7 @@ requirements:
         - seaborn
     run:
         - python {{ python }}
-        - numpy>1.11
+        - numpy
         - scipy
         # - suitesparse
         - matplotlib
