--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -25,6 +25,7 @@ requirements:
     build:
         - {{ compiler('c') }}
         - llvm-openmp  # [osx]
+        - numpy
 
     host:
         - python {{ python }}
