--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -45,6 +45,11 @@ requirements:
         - matplotlib
         - seaborn
         - cython
+        - setuptools
+        - pip
+        - pytest
+        - pytest-cov
+        - llvm-openmp  # [osx]
 
 test:
     imports:
