--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -42,6 +42,7 @@ requirements:
         - numpy>1.11
         - scipy
         # - suitesparse
+        - ray
         - matplotlib
         - seaborn
         - cython
@@ -49,6 +50,7 @@ requirements:
         - pip
         - pytest
         - pytest-cov
+        - pytest-runner
         - llvm-openmp  # [osx]
 
 test:
