--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -61,6 +61,7 @@ test:
         - TraceInv.InterpolateTraceOfInverse
     requires:
         - pytest
+        - pytest-cov
 
 about:
     home: {{ data['url'] }}
