--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -14,7 +14,8 @@ source:
 build:
     number: 0
     script: 
-        - python setup.py install
+        - python setup.py install --single-version-externally-managed --record=record.txt
+        # - python setup.py install
         # - brew install libomp   # [osx]
         # - export LDFLAGS=-L/usr/local/opt/libomp/lib   # [osx]
     # script: # - python setup.py install . --single-version-externally-managed --record=record.txt -vvv
