--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -45,9 +45,9 @@ requirements:
         # - suitesparse
         - matplotlib
         - seaborn
-        - cython
-        - setuptools
-        - llvm-openmp  # [osx]
+        # - cython
+        # - setuptools
+        # - llvm-openmp  # [osx]
 
 test:
     imports:
