--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -35,9 +35,9 @@ requirements:
         - pip
         - pytest-runner
         # - suitesparse
-        - scipy
-        - matplotlib
-        - seaborn
+        # - scipy
+        # - matplotlib
+        # - seaborn
     run:
         - python {{ python }}
         - numpy>1.11
