rm pytest-runner

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -33,7 +33,7 @@ requirements:
         - numpy>1.11
         - cython
         - pip
-        - pytest-runner
+        # - pytest-runner
         # - suitesparse
         # - scipy
         # - matplotlib
