--- a/.github/workflows/deploy-conda2.yml
+++ b/.github/workflows/deploy-conda2.yml
@@ -22,6 +22,13 @@ jobs:
               with:
                   auto-update-conda: true
 
+            - name: Install Visual C++ for Python 2.7
+              if: runner.os == 'Windows'
+              # if: |
+              #     runner.os == 'Windows' &&
+              #     matrix.python-version == '2.7'
+              run: choco install vcpython27 -f -y
+
             - name: Checkout
               uses: actions/checkout@v2
 
