rm pytest-runner4

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -31,7 +31,7 @@ requirements:
         - python {{ python }}
         - setuptools
         - numpy>1.11
-        - cython
+        - cython>0.29
         - pip
         # - pytest-runner
         # - suitesparse
