rm pytest-runner5

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -30,7 +30,7 @@ requirements:
     host:
         - python {{ python }}
         - setuptools
-        - numpy>1.11
+        - numpy
         - cython>0.29
         - pip
         # - pytest-runner
