rm pytest-runner6

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -30,7 +30,7 @@ requirements:
     host:
         - python {{ python }}
         - setuptools
-        - numpy
+        - numpy>1.11
         - cython>0.29
         - pip
         # - pytest-runner
