--- a/.github/workflows/deploy-conda2.yml
+++ b/.github/workflows/deploy-conda2.yml
@@ -29,6 +29,10 @@ jobs:
               #     matrix.python-version == '2.7'
               run: choco install vcpython27 -f -y
 
+            - name: Install OpenMP for MacOS
+              if: runner.os == 'macos'
+              run: brew install libomp
+
             - name: Checkout
               uses: actions/checkout@v2
 
