--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -25,7 +25,7 @@ build:
 requirements:
     build:
         - {{ compiler('c') }}
-        - llvm-openmp  # [osx]
+        # - llvm-openmp  # [osx]
 
     host:
         - python {{ python }}
