--- a/.github/workflows/deploy-conda2.yml
+++ b/.github/workflows/deploy-conda2.yml
@@ -31,8 +31,7 @@ jobs:
 
             - name: Install OpenMP for MacOS
               if: runner.os == 'macos'
-              run: |
-                - brew install libomp
+              run: brew install libomp
 
             - name: Checkout
               uses: actions/checkout@v2
