--- a/conda/conda_build_config.yaml
+++ b/conda/conda_build_config.yaml
@@ -1,2 +1,11 @@
 python:
     - 3.8
+
+macos_min_version:
+  - 10.9
+macos_machine:
+  - x86_64-apple-darwin13.4.0
+MACOSX_DEPLOYMENT_TARGET:
+  - 10.9
+CONDA_BUILD_SYSROOT:            # [osx]
+  - /opt/MacOSX10.9.sdk         # [osx]
