rm pytest-runner15

--- a/conda/conda_build_config.yaml
+++ b/conda/conda_build_config.yaml
@@ -8,4 +8,4 @@ macos_machine:
 MACOSX_DEPLOYMENT_TARGET:
   - 10.9
 CONDA_BUILD_SYSROOT:            # [osx]
-  - /opt/MacOSX10.9.sdk         # [osx]
+  - /         # [osx]
