--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -17,25 +17,31 @@ jobs:
                 python-version: [2.7, 3.5, 3.6, 3.7, 3.8]
 
         steps:
-            - uses: actions/checkout@v2
+            - name: Checkout
+              uses: actions/checkout@v2
+
             - name: Set up Python ${{ matrix.python-version }}
               uses: actions/setup-python@v2
               with:
                   python-version: ${{ matrix.python-version }}
+
             - name: Install prerequisits
               run: |
                   brew install suite-sparse
                   brew install libomp
+
             - name: Install package and dependencies
               run: |
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
                   python -m pip install --upgrade .[full]
+
             - name: Test
               run: |
                   python -m pip install --upgrade pytest
                   python -m pip install --upgrade pytest-cov
                   python setup.py test 
+
             - name: Coverage
               run: |
                   python -m pip install codecov
