--- a/.github/workflows/deploy-conda2.yml
+++ b/.github/workflows/deploy-conda2.yml
@@ -31,7 +31,9 @@ jobs:
 
             - name: Install OpenMP for MacOS
               if: runner.os == 'macos'
-              run: brew install libomp
+              run: |
+                  brew install libomp
+                  brew install llvm
 
             - name: Checkout
               uses: actions/checkout@v2
@@ -43,7 +45,7 @@ jobs:
                   conda config --set anaconda_upload yes
                   export PATH=$(conda info --root):$PATH
                   export PATH=$(conda info --root)/bin:$PATH
-                  export CONDA_BUILD_SYSROOT=/
+                  # export CONDA_BUILD_SYSROOT=/                      # New
                   conda-build --output-folder . .
               env:
                   CYTHON_BUILD_IN_SOURCE: 'true'  # see setup.py. Avoids a bug when building with multiple python variants
