rm pytest-runner22

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -22,17 +22,14 @@ build:
     # script: {{ PYTHON }} -m pip install . --single-version-externally-managed --record=record.txt --no-deps --ignore-installed --no-cache-dir -vvv
     # script: "{{ PYTHON }} -m pip install . -vv"
     features:
-        - vc9               # [win and py27]
-        - vc10              # [win and py34]
-        - vc14              # [win and py35]
+        - vc9               [win and py27]
+        - vc10              [win and py34]
+        - vc14              [win and py35]
 
 requirements:
     build:
         - {{ compiler('c') }}
         - llvm-openmp  # [osx]
-        - vc9               # [win and py27]
-        - vc10              # [win and py34]
-        - vc14              # [win and py35]
 
     host:
         - python {{ python }}
