--- a/conda/conda_build_config.yaml
+++ b/conda/conda_build_config.yaml
@@ -7,5 +7,5 @@ macos_machine:
   - x86_64-apple-darwin13.4.0
 MACOSX_DEPLOYMENT_TARGET:
   - 10.9
-CONDA_BUILD_SYSROOT:            # [osx]
+CONDA_BUILD_SYSROOT:
   - /Library/Developer/CommandLineTools/SDKs/MacOSX10.15.sdk         # [osx]
