--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -14,8 +14,8 @@ source:
 build:
     number: 0
     script: 
-        # - export CFLAGS="${CFLAGS} -isysroot ${CONDA_BUILD_SYSROOT}"; {{ PYTHON }} setup.py install --single-version-externally-managed --record=record.txt
-        - {{ PYTHON }} setup.py install --single-version-externally-managed --record=record.txt
+        - export CFLAGS="${CFLAGS} -isysroot ${CONDA_BUILD_SYSROOT}"; {{ PYTHON }} setup.py install --single-version-externally-managed --record=record.txt
+        # - {{ PYTHON }} setup.py install --single-version-externally-managed --record=record.txt
         # - python setup.py install
         # - brew install libomp   # [osx]
         # - export LDFLAGS=-L/usr/local/opt/libomp/lib   # [osx]
