rm pytest-runner28

--- a/.github/workflows/deploy-conda2.yml
+++ b/.github/workflows/deploy-conda2.yml
@@ -38,9 +38,9 @@ jobs:
             - name: SDK for MacOS
               if: runner.os == 'macos'
               run: |
-                  curl https://github.com/phracker/MacOSX-SDKs/releases/download/10.15/MacOSX10.9.sdk.tar.xz -o /opt/MacOSX10.9.sdk.tar.xz
+                  sudo curl https://github.com/phracker/MacOSX-SDKs/releases/download/10.15/MacOSX10.9.sdk.tar.xz -o /opt/MacOSX10.9.sdk.tar.xz
                   cd /opt
-                  tar -xzf MacOSX10.9.sdk.tar.xz
+                  sudo tar -xzf MacOSX10.9.sdk.tar.xz
                   ls
 
             - name: Checkout
