--- a/.github/workflows/deploy-conda2.yml
+++ b/.github/workflows/deploy-conda2.yml
@@ -40,7 +40,7 @@ jobs:
               run: |
                   sudo curl https://github.com/phracker/MacOSX-SDKs/releases/download/10.15/MacOSX10.9.sdk.tar.xz -o /opt/MacOSX10.9.sdk.tar.xz
                   cd /opt
-                  sudo tar -xzf MacOSX10.9.sdk.tar.xz
+                  sudo gunzip MacOSX10.9.sdk.tar.xz
                   ls
 
             - name: Checkout
