rm pytest-runner31

--- a/.github/workflows/deploy-conda2.yml
+++ b/.github/workflows/deploy-conda2.yml
@@ -38,10 +38,9 @@ jobs:
             - name: SDK for MacOS
               if: runner.os == 'macos'
               run: |
-                  brew install xz
                   sudo curl https://github.com/phracker/MacOSX-SDKs/releases/download/10.15/MacOSX10.9.sdk.tar.xz -o /opt/MacOSX10.9.sdk.tar.xz
                   cd /opt
-                  sudo xz -d MacOSX10.9.sdk.tar.xz
+                  sudo tar -xf MacOSX10.9.sdk.tar.xz
                   ls
 
             - name: Checkout
