rm pytest-runner32

--- a/.github/workflows/deploy-conda2.yml
+++ b/.github/workflows/deploy-conda2.yml
@@ -40,6 +40,7 @@ jobs:
               run: |
                   sudo curl https://github.com/phracker/MacOSX-SDKs/releases/download/10.15/MacOSX10.9.sdk.tar.xz -o /opt/MacOSX10.9.sdk.tar.xz
                   cd /opt
+                  ls -all
                   sudo tar -xf MacOSX10.9.sdk.tar.xz
                   ls
 
