rm pytest-runner33

--- a/.github/workflows/deploy-conda2.yml
+++ b/.github/workflows/deploy-conda2.yml
@@ -38,7 +38,11 @@ jobs:
             - name: SDK for MacOS
               if: runner.os == 'macos'
               run: |
-                  sudo curl https://github.com/phracker/MacOSX-SDKs/releases/download/10.15/MacOSX10.9.sdk.tar.xz -o /opt/MacOSX10.9.sdk.tar.xz
+                  brew install wget
+                  # sudo curl https://github.com/phracker/MacOSX-SDKs/releases/download/10.15/MacOSX10.9.sdk.tar.xz -o /opt/MacOSX10.9.sdk.tar.xz
+                  wget https://github.com/phracker/MacOSX-SDKs/releases/download/10.15/MacOSX10.9.sdk.tar.xz
+                  ls -all
+                  sudo mv MacOSX10.9.sdk.tar.xz /opt
                   cd /opt
                   ls -all
                   sudo tar -xf MacOSX10.9.sdk.tar.xz
