rm pytest-runner36

--- a/.github/workflows/deploy-conda2.yml
+++ b/.github/workflows/deploy-conda2.yml
@@ -44,7 +44,7 @@ jobs:
                   cd /opt
                   sudo tar -xf MacOSX10.9.sdk.tar.xz
                   sudo chmod -R a+rX /opt
-                  sudo xcode-select --install /opt/MacOSX10.9.sdk.tar.xz
+                  xcode-select --install /opt/MacOSX10.9.sdk
 
             - name: Checkout
               uses: actions/checkout@v2
