--- a/.github/workflows/build-macos.yml
+++ b/.github/workflows/build-macos.yml
@@ -13,6 +13,7 @@ jobs:
 
         runs-on: macos-latest
         strategy:
+            fail-fast: false
             matrix:
                 python-version: [2.7, 3.5, 3.6, 3.7, 3.8]
 
