--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -13,15 +13,11 @@ source:
 
 build:
     number: 0
-    script: 
+    script: {{ PYTHON }} setup.py install --single-version-externally-managed --record=record.txt -vvv  # [not mac]
+    script: sh ./build_macos.sh     # [mac]
         # - export CFLAGS="${CFLAGS} -isysroot /Library/Developer/CommandLineTools/SDKs/MacOSX10.15.sdk"; {{ PYTHON }} setup.py install --single-version-externally-managed --record=record.txt
         # - export SDKROOT=/Library/Developer/CommandLineTools/SDKs/MacOSX10.15.sdk; {{ PYTHON }} setup.py install --single-version-externally-managed --record=record.txt
         # - export CFLAGS="${CFLAGS} -isysroot ${CONDA_BUILD_SYSROOT}"; {{ PYTHON }} setup.py install --single-version-externally-managed --record=record.txt
-        - {{ PYTHON }} setup.py install --single-version-externally-managed --record=record.txt  # [not mac]
-        - sh ./build_macos.sh     # [mac]
-        # - python setup.py install
-        # - brew install libomp   # [osx]
-        # - export LDFLAGS=-L/usr/local/opt/libomp/lib   # [osx]
     # script: # - python setup.py install . --single-version-externally-managed --record=record.txt -vvv
     # script: {{ PYTHON }} -m pip install . --single-version-externally-managed --record=record.txt --no-deps --ignore-installed --no-cache-dir -vvv
     # script: "{{ PYTHON }} -m pip install . -vv"
