--- a/.github/workflows/deploy-conda2.yml
+++ b/.github/workflows/deploy-conda2.yml
@@ -60,7 +60,7 @@ jobs:
               env:
                   CYTHON_BUILD_IN_SOURCE: 'true'  # see setup.py. Avoids a bug when building with multiple python variants
                   ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
-                  CONDA_BUILD_SYSROOT: /
+                  CONDA_BUILD_SYSROOT: "/Library/Developer/CommandLineTools/SDKs/MacOSX10.15.sdk"
 
             # - name: Convert linux builds to mac and winsows
             #   run: |
