--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -25,6 +25,8 @@ build:
         - vc9               [win and py27]
         - vc10              [win and py34]
         - vc14              [win and py35]
+    script_env:
+        CONDA_BUILD_SYSROOT  # [mac]
 
 requirements:
     build:
