--- a/.github/workflows/deploy-conda3.yml
+++ b/.github/workflows/deploy-conda3.yml
@@ -12,6 +12,21 @@ jobs:
     build_upload_conda:
         runs-on: macos-latest
         steps:
+            - name: Checkout
+              uses: actions/checkout@v2
+
+            - name: Set up Python ${{ matrix.python-version }}
+              uses: actions/setup-python@v2
+              with:
+                  python-version: 3.8
+
+            - name: Build wheel
+              run: |
+                  python -m pip install --upgrade pip
+                  python -m pip install --upgrade numpy
+                  python -m pip install --upgrade .[full]
+                  ls dist -all
+
             - name: Install conda, conda-build, and conda-client
               run: |
                   brew install wget
@@ -39,9 +54,6 @@ jobs:
             #       sudo tar -xf MacOSX10.9.sdk.tar.xz
             #       sudo chmod -R a+rX /opt
             #       ls /opt -all
-
-            - name: Checkout
-              uses: actions/checkout@v2
 
             - name: Build package
               run: |
