--- a/.github/workflows/deploy-conda3.yml
+++ b/.github/workflows/deploy-conda3.yml
@@ -23,6 +23,7 @@ jobs:
             - name: Install OpenMP for MacOS
               run: |
                   brew install libomp
+                  brew install suite-sparse
                   # brew install llvm
 
             - name: Build wheel
