--- a/.github/workflows/deploy-conda3.yml
+++ b/.github/workflows/deploy-conda3.yml
@@ -31,7 +31,8 @@ jobs:
                   python -m pip install --upgrade pip
                   python -m pip install --upgrade numpy
                   python -m pip install --upgrade .[full]
-                  ls dist -all
+                  python setup.py bdist_wheel
+                  ls dist
 
             - name: Install conda, conda-build, and conda-client
               run: |
