--- a/.github/workflows/deploy-conda3.yml
+++ b/.github/workflows/deploy-conda3.yml
@@ -29,6 +29,7 @@ jobs:
             - name: Build wheel
               run: |
                   python -m pip install --upgrade pip
+                  python -m pip install --upgrade wheel
                   python -m pip install --upgrade numpy
                   python -m pip install --upgrade .[full]
                   python setup.py bdist_wheel
