--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -5,8 +5,8 @@ package:
     name: "{{ name|lower }}"
     version: "{{ data['version'] }}"
 
-source:
-    path: ..
+# source:
+    # path: ..
 
 # source:
 #   url: "https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz"
