--- a/conda/conda_build_config.yaml
+++ b/conda/conda_build_config.yaml
@@ -3,8 +3,8 @@ python:
 
 macos_min_version:
   - 10.9
-# macos_machine:
-  # - x86_64-apple-darwin13.4.0
+macos_machine:
+  - x86_64-apple-darwin13.4.0
 MACOSX_DEPLOYMENT_TARGET:
   - 10.9
 CONDA_BUILD_SYSROOT:
