--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -2,7 +2,7 @@
 {% set data = load_setup_py_data() %}
 
 package:
-    name: "TraceInv"
+    name: "traceinv"
     version: "0.0.1"
     # name: "{{ name|lower }}"
     # version: "{{ data['version'] }}"
