--- a/.github/workflows/deploy-conda3.yml
+++ b/.github/workflows/deploy-conda3.yml
@@ -9,7 +9,39 @@ on:
             - published
 
 jobs:
-    build_upload_conda:
+    build_upload_conda_for_linux_windows:
+        name: Test on ${{ matrix.os }}
+        runs-on: ${{ matrix.os }}
+        strategy:
+            fail-fast: false
+            matrix:
+                os: [ubuntu-latest, windows-latest]
+        steps:
+            - name: Setup Miniconda
+              uses: conda-incubator/setup-miniconda@v2
+              with:
+                  auto-update-conda: true
+
+            - name: Install Visual C++ for Python 2.7
+              if: runner.os == 'Windows'
+              run: choco install vcpython27 -f -y
+
+            - name: Checkout
+              uses: actions/checkout@v2
+
+            - name: Build package
+              shell: bash -l {0}
+              run: |
+                  conda install -y conda-build anaconda-client
+                  conda config --set anaconda_upload yes
+                  export PATH=$(conda info --root):$PATH
+                  export PATH=$(conda info --root)/bin:$PATH
+                  conda-build --output-folder . .
+              env:
+                  CYTHON_BUILD_IN_SOURCE: 'true'  # see setup.py. Avoids a bug when building with multiple python variants
+                  ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
+
+    build_upload_conda_for_mac:
         runs-on: macos-latest
         steps:
             - name: Checkout
@@ -33,7 +65,6 @@ jobs:
                   python -m pip install --upgrade numpy
                   python -m pip install --upgrade .[full]
                   python setup.py bdist_wheel
-                  ls dist
 
             - name: Install conda, conda-build, and conda-client
               run: |
