--- a/.github/workflows/deploy-conda3.yml
+++ b/.github/workflows/deploy-conda3.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
     build_upload_conda_for_linux_windows:
-        name: Test on ${{ matrix.os }}
+        name: Build on ${{ matrix.os }}
         runs-on: ${{ matrix.os }}
         strategy:
             fail-fast: false
